<resources>
    <string name="app_name">My Business Card</string>
    <string name="logo_desc">Restaurant logo</string>
    <string name="title_name">Aloha Restaurant</string>
    <string name="desc">Back from the beach, you would enjoy to relax at the table and taste a great food!</string>
    <string name="location_icon">Location icon</string>
    <string name="email_icon">Email icon</string>
    <string name="web_icon">Web icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="event_icon">Event icon</string>
    <string name="facebook_button">Facebook button</string>
    <string name="twitter_button">Twitter button</string>
    <string name="gplus_button">Google Plus button</string>
    <string name="location_text"> 27 Circular Quay West, Sydney</string>
    <string name="email_text">alohawestsy@gmail.com</string>
    <string name="web_text">https://www.opentable.com/</string>
    <string name="phone_number">1300 999 999</string>
    <string name="event_text">11:00AM &#8211; 8PM\nMonday and Sunday Closed.</string>
</resources>